ISTIO/deployment/6-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-vs
  namespace: go-mesh
spec:
  hosts:
  - "*"
  gateways:
  - go-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
